inf/parser.output
   0  $accept : %entry% $end

   1  input :
   2        | input LOAD
   3        | input SHOWCONTEXT DOUBLESEMI
   4        | input DOUBLESEMI
   5        | input oneREPL

   6  oneREPL : Command DOUBLESEMI
   7          | Command SEMI oneREPL

   8  toplevel : EOF
   9           | Command SEMI toplevel

  10  Command : TermWrap
  11          | UCID TyBinder
  12          | LCID Binder

  13  TyBinder :
  14           | EQ Type

  15  Binder : COLON Type
  16         | EQ Term

  17  Type : ArrowType
  18       | REC UCID DOT Type
  19       | REFTYPE AType
  20       | SOURCE AType
  21       | SINK AType

  22  ArrowType : AType ARROW ArrowType
  23            | AType

  24  AType : LPAREN Type RPAREN
  25        | UCID
  26        | TOP
  27        | FLOAT
  28        | STRING
  29        | BOOL
  30        | NAT
  31        | UNITTYPE
  32        | LCURLY TyFields RCURLY
  33        | LT TyFields GT
  34        | LIST Type

  35  LType : LSQUARE Type RSQUARE

  36  TyFields :
  37           | NETyFields

  38  NETyFields : TyField
  39             | TyField COMMA NETyFields

  40  TyField : LCID COLON Type
  41          | Type

  42  TermWrap : TermWrap COMMA LCID EQ Term
  43           | Term WHERE LCID EQ Term
  44           | Term

  45  Cases : Case
  46        | Case VBAR Cases

  47  Case : LT LCID EQ LCID GT DARROW AppTerm

  48  Term : AppTerm
  49       | LAMBDA LCID COLON Type DOT Term
  50       | LAMBDA USCORE COLON Type DOT Term
  51       | IF Term THEN Term ELSE Term
  52       | LET LCID EQ Term IN Term
  53       | LET USCORE EQ Term IN Term
  54       | LETREC LCID COLON Type EQ Term IN Term
  55       | CASE Term OF Cases
  56       | AppTerm COLONEQ AppTerm
  57       | CONS LType ATerm ATerm
  58       | HEAD LType ATerm
  59       | TAIL LType ATerm
  60       | ISNIL LType ATerm

  61  AppTerm : PathTerm
  62          | AppTerm PathTerm
  63          | PathTerm TIMESFLOAT PathTerm
  64          | FOLD LSQUARE Type RSQUARE
  65          | UNFOLD LSQUARE Type RSQUARE
  66          | FIX PathTerm
  67          | REF PathTerm
  68          | BANG PathTerm
  69          | SUCC PathTerm
  70          | PRED PathTerm
  71          | ISZERO PathTerm

  72  PathTerm : PathTerm DOT LCID
  73           | PathTerm DOT INTV
  74           | AscribeTerm

  75  AscribeTerm : ATerm AS Type
  76              | ATerm

  77  ATerm : LPAREN TermSeq RPAREN
  78        | LCURLY Fields RCURLY
  79        | LT LCID EQ Term GT AS Type
  80        | LCID
  81        | STRINGV
  82        | FLOATV
  83        | UNIT
  84        | TRUE
  85        | FALSE
  86        | INTV
  87        | NIL LType

  88  TermSeq : Term
  89          | Term SEMI TermSeq

  90  Fields :
  91         | NEFields

  92  NEFields : Field
  93           | Field COMMA NEFields

  94  Field : LCID EQ Term
  95        | Term

  96  %entry% : '\001' toplevel
  97          | '\002' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . toplevel  (96)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAMBDA  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	UCID  shift 24
	LCID  shift 25
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	EOF  shift 30
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	toplevel  goto 34
	Command  goto 35
	TermWrap  goto 36
	Term  goto 37
	AppTerm  goto 38
	ATerm  goto 39
	PathTerm  goto 40
	AscribeTerm  goto 41


state 2
	%entry% : '\002' . input  (97)
	input : .  (1)

	.  reduce 1

	input  goto 42


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	AppTerm : FOLD . LSQUARE Type RSQUARE  (64)

	LSQUARE  shift 43
	.  error


state 5
	AppTerm : UNFOLD . LSQUARE Type RSQUARE  (65)

	LSQUARE  shift 44
	.  error


state 6
	AppTerm : REF . PathTerm  (67)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 39
	PathTerm  goto 46
	AscribeTerm  goto 41


state 7
	Term : TAIL . LType ATerm  (59)

	LSQUARE  shift 47
	.  error

	LType  goto 48


state 8
	Term : HEAD . LType ATerm  (58)

	LSQUARE  shift 47
	.  error

	LType  goto 49


state 9
	Term : ISNIL . LType ATerm  (60)

	LSQUARE  shift 47
	.  error

	LType  goto 50


state 10
	Term : CONS . LType ATerm ATerm  (57)

	LSQUARE  shift 47
	.  error

	LType  goto 51


state 11
	ATerm : NIL . LType  (87)

	LSQUARE  shift 47
	.  error

	LType  goto 52


state 12
	Term : LETREC . LCID COLON Type EQ Term IN Term  (54)

	LCID  shift 53
	.  error


state 13
	AppTerm : FIX . PathTerm  (66)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 39
	PathTerm  goto 54
	AscribeTerm  goto 41


state 14
	Term : CASE . Term OF Cases  (55)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAMBDA  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Term  goto 55
	AppTerm  goto 38
	ATerm  goto 39
	PathTerm  goto 40
	AscribeTerm  goto 41


state 15
	ATerm : UNIT .  (83)

	.  reduce 83


state 16
	Term : LET . LCID EQ Term IN Term  (52)
	Term : LET . USCORE EQ Term IN Term  (53)

	LCID  shift 56
	USCORE  shift 57
	.  error


state 17
	AppTerm : SUCC . PathTerm  (69)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 39
	PathTerm  goto 58
	AscribeTerm  goto 41


state 18
	AppTerm : PRED . PathTerm  (70)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 39
	PathTerm  goto 59
	AscribeTerm  goto 41


state 19
	AppTerm : ISZERO . PathTerm  (71)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 39
	PathTerm  goto 60
	AscribeTerm  goto 41


state 20
	Term : LAMBDA . LCID COLON Type DOT Term  (49)
	Term : LAMBDA . USCORE COLON Type DOT Term  (50)

	LCID  shift 61
	USCORE  shift 62
	.  error


state 21
	Term : IF . Term THEN Term ELSE Term  (51)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAMBDA  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Term  goto 63
	AppTerm  goto 38
	ATerm  goto 39
	PathTerm  goto 40
	AscribeTerm  goto 41


state 22
	ATerm : TRUE .  (84)

	.  reduce 84


state 23
	ATerm : FALSE .  (85)

	.  reduce 85


state 24
	Command : UCID . TyBinder  (11)
	TyBinder : .  (13)

	EQ  shift 64
	SEMI  reduce 13
	DOUBLESEMI  reduce 13

	TyBinder  goto 65


state 25
	Command : LCID . Binder  (12)
	ATerm : LCID .  (80)

	COLON  shift 66
	EQ  shift 67
	NIL  reduce 80
	TIMESFLOAT  reduce 80
	AS  reduce 80
	UNIT  reduce 80
	WHERE  reduce 80
	TRUE  reduce 80
	FALSE  reduce 80
	LCID  reduce 80
	INTV  reduce 80
	FLOATV  reduce 80
	STRINGV  reduce 80
	COLONEQ  reduce 80
	COMMA  reduce 80
	DOT  reduce 80
	LCURLY  reduce 80
	LPAREN  reduce 80
	LT  reduce 80
	SEMI  reduce 80
	DOUBLESEMI  reduce 80

	Binder  goto 68


state 26
	ATerm : INTV .  (86)

	.  reduce 86


state 27
	ATerm : FLOATV .  (82)

	.  reduce 82


state 28
	ATerm : STRINGV .  (81)

	.  reduce 81


state 29
	AppTerm : BANG . PathTerm  (68)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 39
	PathTerm  goto 69
	AscribeTerm  goto 41


state 30
	toplevel : EOF .  (8)

	.  reduce 8


state 31
	ATerm : LCURLY . Fields RCURLY  (78)
	Fields : .  (90)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAMBDA  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 70
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	RCURLY  reduce 90

	Term  goto 71
	AppTerm  goto 38
	ATerm  goto 39
	PathTerm  goto 40
	AscribeTerm  goto 41
	Fields  goto 72
	NEFields  goto 73
	Field  goto 74


state 32
	ATerm : LPAREN . TermSeq RPAREN  (77)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAMBDA  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Term  goto 75
	AppTerm  goto 38
	ATerm  goto 39
	PathTerm  goto 40
	AscribeTerm  goto 41
	TermSeq  goto 76


state 33
	ATerm : LT . LCID EQ Term GT AS Type  (79)

	LCID  shift 77
	.  error


state 34
	%entry% : '\001' toplevel .  (96)

	.  reduce 96


state 35
	toplevel : Command . SEMI toplevel  (9)

	SEMI  shift 78
	.  error


state 36
	Command : TermWrap .  (10)
	TermWrap : TermWrap . COMMA LCID EQ Term  (42)

	COMMA  shift 79
	SEMI  reduce 10
	DOUBLESEMI  reduce 10


state 37
	TermWrap : Term . WHERE LCID EQ Term  (43)
	TermWrap : Term .  (44)

	WHERE  shift 80
	COMMA  reduce 44
	SEMI  reduce 44
	DOUBLESEMI  reduce 44


state 38
	Term : AppTerm .  (48)
	Term : AppTerm . COLONEQ AppTerm  (56)
	AppTerm : AppTerm . PathTerm  (62)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	COLONEQ  shift 81
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	OF  reduce 48
	WHERE  reduce 48
	IN  reduce 48
	THEN  reduce 48
	ELSE  reduce 48
	COMMA  reduce 48
	GT  reduce 48
	RCURLY  reduce 48
	RPAREN  reduce 48
	SEMI  reduce 48
	DOUBLESEMI  reduce 48

	ATerm  goto 39
	PathTerm  goto 82
	AscribeTerm  goto 41


state 39
	AscribeTerm : ATerm . AS Type  (75)
	AscribeTerm : ATerm .  (76)

	AS  shift 83
	NIL  reduce 76
	TIMESFLOAT  reduce 76
	OF  reduce 76
	UNIT  reduce 76
	WHERE  reduce 76
	IN  reduce 76
	THEN  reduce 76
	ELSE  reduce 76
	TRUE  reduce 76
	FALSE  reduce 76
	LCID  reduce 76
	INTV  reduce 76
	FLOATV  reduce 76
	STRINGV  reduce 76
	COLONEQ  reduce 76
	COMMA  reduce 76
	DOT  reduce 76
	GT  reduce 76
	LCURLY  reduce 76
	LPAREN  reduce 76
	LT  reduce 76
	RCURLY  reduce 76
	RPAREN  reduce 76
	SEMI  reduce 76
	VBAR  reduce 76
	DOUBLESEMI  reduce 76


state 40
	AppTerm : PathTerm .  (61)
	AppTerm : PathTerm . TIMESFLOAT PathTerm  (63)
	PathTerm : PathTerm . DOT LCID  (72)
	PathTerm : PathTerm . DOT INTV  (73)

	TIMESFLOAT  shift 84
	DOT  shift 85
	NIL  reduce 61
	OF  reduce 61
	UNIT  reduce 61
	WHERE  reduce 61
	IN  reduce 61
	THEN  reduce 61
	ELSE  reduce 61
	TRUE  reduce 61
	FALSE  reduce 61
	LCID  reduce 61
	INTV  reduce 61
	FLOATV  reduce 61
	STRINGV  reduce 61
	COLONEQ  reduce 61
	COMMA  reduce 61
	GT  reduce 61
	LCURLY  reduce 61
	LPAREN  reduce 61
	LT  reduce 61
	RCURLY  reduce 61
	RPAREN  reduce 61
	SEMI  reduce 61
	VBAR  reduce 61
	DOUBLESEMI  reduce 61


state 41
	PathTerm : AscribeTerm .  (74)

	.  reduce 74


state 42
	input : input . LOAD  (2)
	input : input . SHOWCONTEXT DOUBLESEMI  (3)
	input : input . DOUBLESEMI  (4)
	input : input . oneREPL  (5)
	%entry% : '\002' input .  (97)

	LOAD  shift 86
	SHOWCONTEXT  shift 87
	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAMBDA  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	UCID  shift 24
	LCID  shift 25
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	DOUBLESEMI  shift 88
	$end  reduce 97

	oneREPL  goto 89
	Command  goto 90
	TermWrap  goto 36
	Term  goto 37
	AppTerm  goto 38
	ATerm  goto 39
	PathTerm  goto 40
	AscribeTerm  goto 41


state 43
	AppTerm : FOLD LSQUARE . Type RSQUARE  (64)

	REC  shift 91
	TOP  shift 92
	SOURCE  shift 93
	SINK  shift 94
	REFTYPE  shift 95
	LIST  shift 96
	STRING  shift 97
	FLOAT  shift 98
	UNITTYPE  shift 99
	BOOL  shift 100
	NAT  shift 101
	UCID  shift 102
	LCURLY  shift 103
	LPAREN  shift 104
	LT  shift 105
	.  error

	Type  goto 106
	ArrowType  goto 107
	AType  goto 108


state 44
	AppTerm : UNFOLD LSQUARE . Type RSQUARE  (65)

	REC  shift 91
	TOP  shift 92
	SOURCE  shift 93
	SINK  shift 94
	REFTYPE  shift 95
	LIST  shift 96
	STRING  shift 97
	FLOAT  shift 98
	UNITTYPE  shift 99
	BOOL  shift 100
	NAT  shift 101
	UCID  shift 102
	LCURLY  shift 103
	LPAREN  shift 104
	LT  shift 105
	.  error

	Type  goto 109
	ArrowType  goto 107
	AType  goto 108


state 45
	ATerm : LCID .  (80)

	.  reduce 80


state 46
	AppTerm : REF PathTerm .  (67)
	PathTerm : PathTerm . DOT LCID  (72)
	PathTerm : PathTerm . DOT INTV  (73)

	DOT  shift 85
	NIL  reduce 67
	OF  reduce 67
	UNIT  reduce 67
	WHERE  reduce 67
	IN  reduce 67
	THEN  reduce 67
	ELSE  reduce 67
	TRUE  reduce 67
	FALSE  reduce 67
	LCID  reduce 67
	INTV  reduce 67
	FLOATV  reduce 67
	STRINGV  reduce 67
	COLONEQ  reduce 67
	COMMA  reduce 67
	GT  reduce 67
	LCURLY  reduce 67
	LPAREN  reduce 67
	LT  reduce 67
	RCURLY  reduce 67
	RPAREN  reduce 67
	SEMI  reduce 67
	VBAR  reduce 67
	DOUBLESEMI  reduce 67


state 47
	LType : LSQUARE . Type RSQUARE  (35)

	REC  shift 91
	TOP  shift 92
	SOURCE  shift 93
	SINK  shift 94
	REFTYPE  shift 95
	LIST  shift 96
	STRING  shift 97
	FLOAT  shift 98
	UNITTYPE  shift 99
	BOOL  shift 100
	NAT  shift 101
	UCID  shift 102
	LCURLY  shift 103
	LPAREN  shift 104
	LT  shift 105
	.  error

	Type  goto 110
	ArrowType  goto 107
	AType  goto 108


state 48
	Term : TAIL LType . ATerm  (59)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 111


state 49
	Term : HEAD LType . ATerm  (58)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 112


state 50
	Term : ISNIL LType . ATerm  (60)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 113


state 51
	Term : CONS LType . ATerm ATerm  (57)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATerm  goto 114


state 52
	ATerm : NIL LType .  (87)

	.  reduce 87


state 53
	Term : LETREC LCID . COLON Type EQ Term IN Term  (54)

	COLON  shift 115
	.  error


state 54
	AppTerm : FIX PathTerm .  (66)
	PathTerm : PathTerm . DOT LCID  (72)
	PathTerm : PathTerm . DOT INTV  (73)

	DOT  shift 85
	NIL  reduce 66
	OF  reduce 66
	UNIT  reduce 66
	WHERE  reduce 66
	IN  reduce 66
	THEN  reduce 66
	ELSE  reduce 66
	TRUE  reduce 66
	FALSE  reduce 66
	LCID  reduce 66
	INTV  reduce 66
	FLOATV  reduce 66
	STRINGV  reduce 66
	COLONEQ  reduce 66
	COMMA  reduce 66
	GT  reduce 66
	LCURLY  reduce 66
	LPAREN  reduce 66
	LT  reduce 66
	RCURLY  reduce 66
	RPAREN  reduce 66
	SEMI  reduce 66
	VBAR  reduce 66
	DOUBLESEMI  reduce 66


state 55
	Term : CASE Term . OF Cases  (55)

	OF  shift 116
	.  error


state 56
	Term : LET LCID . EQ Term IN Term  (52)

	EQ  shift 117
	.  error


state 57
	Term : LET USCORE . EQ Term IN Term  (53)

	EQ  shift 118
	.  error


state 58
	AppTerm : SUCC PathTerm .  (69)
	PathTerm : PathTerm . DOT LCID  (72)
	PathTerm : PathTerm . DOT INTV  (73)

	DOT  shift 85
	NIL  reduce 69
	OF  reduce 69
	UNIT  reduce 69
	WHERE  reduce 69
	IN  reduce 69
	THEN  reduce 69
	ELSE  reduce 69
	TRUE  reduce 69
	FALSE  reduce 69
	LCID  reduce 69
	INTV  reduce 69
	FLOATV  reduce 69
	STRINGV  reduce 69
	COLONEQ  reduce 69
	COMMA  reduce 69
	GT  reduce 69
	LCURLY  reduce 69
	LPAREN  reduce 69
	LT  reduce 69
	RCURLY  reduce 69
	RPAREN  reduce 69
	SEMI  reduce 69
	VBAR  reduce 69
	DOUBLESEMI  reduce 69


state 59
	AppTerm : PRED PathTerm .  (70)
	PathTerm : PathTerm . DOT LCID  (72)
	PathTerm : PathTerm . DOT INTV  (73)

	DOT  shift 85
	NIL  reduce 70
	OF  reduce 70
	UNIT  reduce 70
	WHERE  reduce 70
	IN  reduce 70
	THEN  reduce 70
	ELSE  reduce 70
	TRUE  reduce 70
	FALSE  reduce 70
	LCID  reduce 70
	INTV  reduce 70
	FLOATV  reduce 70
	STRINGV  reduce 70
	COLONEQ  reduce 70
	COMMA  reduce 70
	GT  reduce 70
	LCURLY  reduce 70
	LPAREN  reduce 70
	LT  reduce 70
	RCURLY  reduce 70
	RPAREN  reduce 70
	SEMI  reduce 70
	VBAR  reduce 70
	DOUBLESEMI  reduce 70


state 60
	AppTerm : ISZERO PathTerm .  (71)
	PathTerm : PathTerm . DOT LCID  (72)
	PathTerm : PathTerm . DOT INTV  (73)

	DOT  shift 85
	NIL  reduce 71
	OF  reduce 71
	UNIT  reduce 71
	WHERE  reduce 71
	IN  reduce 71
	THEN  reduce 71
	ELSE  reduce 71
	TRUE  reduce 71
	FALSE  reduce 71
	LCID  reduce 71
	INTV  reduce 71
	FLOATV  reduce 71
	STRINGV  reduce 71
	COLONEQ  reduce 71
	COMMA  reduce 71
	GT  reduce 71
	LCURLY  reduce 71
	LPAREN  reduce 71
	LT  reduce 71
	RCURLY  reduce 71
	RPAREN  reduce 71
	SEMI  reduce 71
	VBAR  reduce 71
	DOUBLESEMI  reduce 71


state 61
	Term : LAMBDA LCID . COLON Type DOT Term  (49)

	COLON  shift 119
	.  error


state 62
	Term : LAMBDA USCORE . COLON Type DOT Term  (50)

	COLON  shift 120
	.  error


state 63
	Term : IF Term . THEN Term ELSE Term  (51)

	THEN  shift 121
	.  error


state 64
	TyBinder : EQ . Type  (14)

	REC  shift 91
	TOP  shift 92
	SOURCE  shift 93
	SINK  shift 94
	REFTYPE  shift 95
	LIST  shift 96
	STRING  shift 97
	FLOAT  shift 98
	UNITTYPE  shift 99
	BOOL  shift 100
	NAT  shift 101
	UCID  shift 102
	LCURLY  shift 103
	LPAREN  shift 104
	LT  shift 105
	.  error

	Type  goto 122
	ArrowType  goto 107
	AType  goto 108


state 65
	Command : UCID TyBinder .  (11)

	.  reduce 11


state 66
	Binder : COLON . Type  (15)

	REC  shift 91
	TOP  shift 92
	SOURCE  shift 93
	SINK  shift 94
	REFTYPE  shift 95
	LIST  shift 96
	STRING  shift 97
	FLOAT  shift 98
	UNITTYPE  shift 99
	BOOL  shift 100
	NAT  shift 101
	UCID  shift 102
	LCURLY  shift 103
	LPAREN  shift 104
	LT  shift 105
	.  error

	Type  goto 123
	ArrowType  goto 107
	AType  goto 108


state 67
	Binder : EQ . Term  (16)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAMBDA  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Term  goto 124
	AppTerm  goto 38
	ATerm  goto 39
	PathTerm  goto 40
	AscribeTerm  goto 41


state 68
	Command : LCID Binder .  (12)

	.  reduce 12


state 69
	AppTerm : BANG PathTerm .  (68)
	PathTerm : PathTerm . DOT LCID  (72)
	PathTerm : PathTerm . DOT INTV  (73)

	DOT  shift 85
	NIL  reduce 68
	OF  reduce 68
	UNIT  reduce 68
	WHERE  reduce 68
	IN  reduce 68
	THEN  reduce 68
	ELSE  reduce 68
	TRUE  reduce 68
	FALSE  reduce 68
	LCID  reduce 68
	INTV  reduce 68
	FLOATV  reduce 68
	STRINGV  reduce 68
	COLONEQ  reduce 68
	COMMA  reduce 68
	GT  reduce 68
	LCURLY  reduce 68
	LPAREN  reduce 68
	LT  reduce 68
	RCURLY  reduce 68
	RPAREN  reduce 68
	SEMI  reduce 68
	VBAR  reduce 68
	DOUBLESEMI  reduce 68


state 70
	ATerm : LCID .  (80)
	Field : LCID . EQ Term  (94)

	EQ  shift 125
	NIL  reduce 80
	TIMESFLOAT  reduce 80
	AS  reduce 80
	UNIT  reduce 80
	TRUE  reduce 80
	FALSE  reduce 80
	LCID  reduce 80
	INTV  reduce 80
	FLOATV  reduce 80
	STRINGV  reduce 80
	COLONEQ  reduce 80
	COMMA  reduce 80
	DOT  reduce 80
	LCURLY  reduce 80
	LPAREN  reduce 80
	LT  reduce 80
	RCURLY  reduce 80


state 71
	Field : Term .  (95)

	.  reduce 95


state 72
	ATerm : LCURLY Fields . RCURLY  (78)

	RCURLY  shift 126
	.  error


state 73
	Fields : NEFields .  (91)

	.  reduce 91


state 74
	NEFields : Field .  (92)
	NEFields : Field . COMMA NEFields  (93)

	COMMA  shift 127
	RCURLY  reduce 92


state 75
	TermSeq : Term .  (88)
	TermSeq : Term . SEMI TermSeq  (89)

	SEMI  shift 128
	RPAREN  reduce 88


state 76
	ATerm : LPAREN TermSeq . RPAREN  (77)

	RPAREN  shift 129
	.  error


state 77
	ATerm : LT LCID . EQ Term GT AS Type  (79)

	EQ  shift 130
	.  error


state 78
	toplevel : Command SEMI . toplevel  (9)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAMBDA  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	UCID  shift 24
	LCID  shift 25
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	EOF  shift 30
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	toplevel  goto 131
	Command  goto 35
	TermWrap  goto 36
	Term  goto 37
	AppTerm  goto 38
	ATerm  goto 39
	PathTerm  goto 40
	AscribeTerm  goto 41


state 79
	TermWrap : TermWrap COMMA . LCID EQ Term  (42)

	LCID  shift 132
	.  error


state 80
	TermWrap : Term WHERE . LCID EQ Term  (43)

	LCID  shift 133
	.  error


state 81
	Term : AppTerm COLONEQ . AppTerm  (56)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	NIL  shift 11
	FIX  shift 13
	UNIT  shift 15
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	AppTerm  goto 134
	ATerm  goto 39
	PathTerm  goto 40
	AscribeTerm  goto 41


state 82
	AppTerm : AppTerm PathTerm .  (62)
	PathTerm : PathTerm . DOT LCID  (72)
	PathTerm : PathTerm . DOT INTV  (73)

	DOT  shift 85
	NIL  reduce 62
	OF  reduce 62
	UNIT  reduce 62
	WHERE  reduce 62
	IN  reduce 62
	THEN  reduce 62
	ELSE  reduce 62
	TRUE  reduce 62
	FALSE  reduce 62
	LCID  reduce 62
	INTV  reduce 62
	FLOATV  reduce 62
	STRINGV  reduce 62
	COLONEQ  reduce 62
	COMMA  reduce 62
	GT  reduce 62
	LCURLY  reduce 62
	LPAREN  reduce 62
	LT  reduce 62
	RCURLY  reduce 62
	RPAREN  reduce 62
	SEMI  reduce 62
	VBAR  reduce 62
	DOUBLESEMI  reduce 62


state 83
	AscribeTerm : ATerm AS . Type  (75)
